--- a/KTX_Management/KTX_Management/Views/HopDong/HopDongMain.cshtml
+++ b/KTX_Management/KTX_Management/Views/HopDong/HopDongMain.cshtml
@@ -142,7 +142,7 @@
     }
 
     function addContact() {
-        window.location = "HopDong/TaoHopDong";
+        window.location = "TaoHopDong";
     }
 
     function closeDialog() {
@@ -173,7 +173,7 @@
     }
 
     function gotoContactDetail(id) {
-        window.location = "HopDong/GoToChiTietHopDong/" + id;
+        window.location = "GoToChiTietHopDong/" + id;
     }
 
     function updateContact() {
