--- a/KTX_Management/KTX_Management/Views/TraCuu/TraCuu.cshtml
+++ b/KTX_Management/KTX_Management/Views/TraCuu/TraCuu.cshtml
@@ -11,7 +11,7 @@
         <div class="col-6" style="text-align:center">
             <h3>Tra cứu thông tin </h3>
 
-            <form method="post" action="TraCuu/KetQuaTraCuu">
+            <form method="post" action="KetQuaTraCuu">
                 <div class="card" style="padding:20px; margin:20px">
 
                     <input type="number"  hidden="hidden" name="txtAreaId" id="txtAreaId"/>
