--- a/KTX_Management/KTX_Management/Views/HopDong/GoToChiTietHopDong.cshtml
+++ b/KTX_Management/KTX_Management/Views/HopDong/GoToChiTietHopDong.cshtml
@@ -105,7 +105,7 @@
             </div>
 
             <div class="col-2">
-                <button class="btn btn-primary">Thêm thanh toán</button>
+                <a class="btn btn-primary" href="/ThanhToan/Index" style="color: white">Thêm thanh toán</a>
             </div>
         </div>
 
@@ -142,4 +142,7 @@
 
 <script>
 
+    function themThanhToan() {
+        window.location = "ThanhToan/Index";
+    }
 </script>
